# mono

./: .gitignore  Cargo.toml  README.md
config/: development.yaml  test.yaml
embed_db/: Cargo.toml
embed_db/examples/: chunk_embed.rs  compare.rs  db_ops.rs  hnsw.rs
embed_db/src/: embedder.rs  lib.rs  vector_db.rs
embedder/: Cargo.toml
embedder/gtr-t5-base/: CITATION  config.json  convert-gtr.ipynb
embedder/src/: embedder.rs  main.rs
examples/: playground.rs
file_indexer/: Cargo.toml
file_indexer/src/: lib.rs  registration.rs  subprocessor.rs  tokenize.rs
frontend/: package-lock.json  package.json
frontend/src/lib/: types.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  DirSearch.svelte  FileCard.svelte  MainSearch.svelte  MainView.svelte  layout.css
frontend/src/routes/file/[id]/: +page.svelte
migration/src/: lib.rs  m20251121_101838_searches.rs  m20251121_102944_files.rs  m20251121_115159_index_tasks.rs  m20251123_155655_file_chunks.rs
src/: app.rs  hnsw.rs  lib.rs
src/controllers/: directories.rs  files.rs  index_tasks.rs  indexer.rs  mod.rs  searches.rs
src/models/: file_chunks.rs  files.rs  index_tasks.rs  mod.rs  searches.rs
src/models/_entities/: file_chunks.rs  files.rs  index_tasks.rs  mod.rs  prelude.rs  searches.rs
src/views/: files.rs  index.rs  mod.rs
src/workers/: directory_indexer.rs  mod.rs
src/workers/directory_indexer/: mod.rs
src/workers/directory_indexer/processor/: mod.rs  registration.rs  subprocessor.rs  tokenize.rs
tests/models/: file_chunks.rs  mod.rs  users.rs
tests/requests/: auth.rs  files.rs  index_tasks.rs  indexer.rs  mod.rs  prepare_data.rs  searches.rs
tests/workers/: directory_indexer.rs  mod.rs
