[workspace]
members = ["embed_db"]

[package]
name = "mono"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "mono-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
embed_db = {path = "embed_db"}
hnsw_rs = {path = "../hnswlib-rs"}
loco-rs = { version = "0.16" }
tokio = { version = "1.45", default-features = false, features = [
  "rt-multi-thread",
  "sync"
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

[dependencies]
loco-rs = { workspace = true  }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = { version = "0.1" }
axum = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
regex = { version = "1.11" }
migration = { path = "migration" }
sea-orm = { version = "1.1", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
chrono = { version = "0.4" }
validator = { version = "0.20" }
uuid = { version = "1.6", features = ["v4"] }
include_dir = { version = "0.7" }
axum-extra = { version = "0.10", features = ["form"] }
embed_db.workspace = true
thiserror = "2.0.17"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"

[[bin]]
name = "mono-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = { version = "3.1.1" }
rstest = { version = "0.25" }
insta = { version = "1.34", features = ["redactions", "yaml", "filters"] }
